--- a/deployment.yml
+++ b/deployment.yml
@@ -1,20 +1,20 @@
 ---
-apiVesrion: apps/v1
+apiVersion: apps/v1
 kind: Deployment
-metadta:
+metadata:
   name: flm
 spec:
-  replicas: 2
+  replicas: 3
   selector:
     matchLabels:
       app: swiggy
-  template: 
+  template:
     metadata:
-       labels:
-          app: swiggy
-  spec:
-    containers:
-      - name: con1
-        image: shaikmustafa/paytm:movie
-        ports:
-         - containerPort: 80
+      labels:
+        app: swiggy
+    spec:
+      containers:
+        - name: cont1
+          image: shaikmustafa/paytm:movie
+          ports:
+          - containerPort: 80
